メッセージファイルの内容を更新し、英語と日本語の拡張名およびアクションタイトルを「YouTube Comment Marks」から「YouTube Highlight Markers」に変更。

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
-  "extName": { "message": "YouTube Comment Marks" },
+  "extName": { "message": "YouTube Highlight Markers" },
   "extDesc": { "message": "Show comment timestamps as markers on the YouTube seek bar." },
-  "actionTitle": { "message": "YouTube Comment Marks" }
+  "actionTitle": { "message": "YouTube Highlight Markers" }
 }
 
 
