メッセージファイルの内容を更新し、英語と日本語の拡張名および説明を「YouTube Highlight Markers」から「YouTube Comment Timestamp Markers」に変更。アクションタイトルも「YouTube Highlight Markers」から「Enable comment markers」に修正。

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,7 +1,7 @@
 {
-  "extName": { "message": "YouTube Highlight Markers" },
-  "extDesc": { "message": "Show comment timestamps as markers on the YouTube seek bar." },
-  "actionTitle": { "message": "YouTube Highlight Markers" }
+  "extName": { "message": "YouTube Comment Timestamp Markers" },
+  "extDesc": { "message": "Adds markers to the YouTube progress bar from timestamps found in comments." },
+  "actionTitle": { "message": "Enable comment markers" }
 }
 
 
